--- a/index.html
+++ b/index.html
@@ -14,6 +14,15 @@
         <meta name="robots" content="">
         <meta name="viewport" content="width=device-width">
 
+        <!-- Configurações para o Facebook -->
+        <meta property="og:title" content="" />
+        <meta property="og:type" content="" />
+        <meta property="og:description" content="Não ultrapasse 250 caracteres"/>
+        <meta property="og:url" content="" />
+        <meta property="og:site_name" content="" />
+        <meta property="og:image " content=""/>
+        <meta property="fb:app_id" content=""/>
+
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
         <link rel="shortcut icon" href="favicon.ico" />
 
@@ -33,7 +42,7 @@
             </nav>
         </header>
 
-        <div class="main">
+        <div class="main" role="main">
             conteudo
         </div>
 
